style: :lipstick: Trying styles on profile

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -170,22 +170,20 @@
 
         <!-- Columna Derecha -->
         <div class="col-xl-6 colRight">
-            <div class="row">
-                <div class="containerMadePubli">
-                    <textarea type="text" class="form-control" id="madePubliText" rows="10"
-                        placeholder="Publica algo $Nickname..."></textarea>
-                    <img src="../assets/images/picture.png" alt="" id="madePubliImg">
-                    <button type="button" class="btn btn-primary" id="btnMadePubli">
-                        PUBLICAR
-                    </button>
-                </div>
+            <div class="containerMadePubli">
+                <textarea type="text" class="form-control" id="madePubliText" rows="10"
+                    placeholder="Publica algo $Nickname..."></textarea>
+                    <div class="containerButtons">
+                        <img src="../assets/images/picture.png" alt="" id="madePubliImg">
+                        <button type="button" class="btn btn-primary" id="btnMadePubli">
+                            PUBLICAR
+                        </button>
+                    </div>
             </div>
-            <div class="row">
-                <div class="containerPubli">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga accusamus tempore architecto earum
-                    perferendis quo hic, sequi iure? Porro quasi facilis sapiente error quis rem minima aut ex pariatur
-                    obcaecati?
-                </div>
+            <div class="containerPubli">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga accusamus tempore architecto earum
+                perferendis quo hic, sequi iure? Porro quasi facilis sapiente error quis rem minima aut ex pariatur
+                obcaecati?
             </div>
         </div> <!-- Cierra Columna Derecha -->
 
