style: :lipstick: Profile w/publications

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -170,6 +170,7 @@
 
         <!-- Columna Derecha -->
         <div class="col-xl-6 colRight">
+            <!-- Contenedor Crear Publicación -->
             <div class="containerMadePubli">
                 <textarea type="text" class="form-control" id="madePubliText" rows="10"
                     placeholder="Publica algo $Nickname..."></textarea>
@@ -179,15 +180,52 @@
                             PUBLICAR
                         </button>
                     </div>
+            </div> <!-- Cierra Contenedor Crear Publicación -->
+            <!-- Publicaciones -->
+            <div class="containerPubli">
+                <div class="contPersonalInfo-Publi">
+                    <img src="../assets/images/perfil.jpg" alt="">
+                    <div id="nicknamePrestige">
+                        <span>Nickname</span>
+                        <p>Warzone Pro</p>
+                    </div>
+                </div>
+                <div class="contText-Publi">
+                    <h3>Jugando en el torneo nacional de #Warzone en CDMX</h3>
+                    <span>#LATAM #proplayer</span>
+                </div>
+                <div class="contImg-Publi">
+                    <img src="../assets/images/COD_Game.avif" alt="">
+                </div>
+                <div class="contReactions">
+                    <img src="../assets/images/like.png" alt="">
+                    <img src="../assets/images/comment.png" alt="">
+                    <img src="../assets/images/share.svg" alt="">
+                </div>
             </div>
             <div class="containerPubli">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga accusamus tempore architecto earum
-                perferendis quo hic, sequi iure? Porro quasi facilis sapiente error quis rem minima aut ex pariatur
-                obcaecati?
+                <div class="contPersonalInfo-Publi">
+                    <img src="../assets/images/perfil.jpg" alt="">
+                    <div id="nicknamePrestige">
+                        <span>Nickname</span>
+                        <p>Warzone Pro</p>
+                    </div>
+                </div>
+                <div class="contText-Publi">
+                    <h3>Jugando en el torneo nacional de #Warzone en CDMX</h3>
+                    <span>#LATAM #proplayer</span>
+                </div>
+                <div class="contImg-Publi">
+                    <img src="../assets/images/COD_Game.avif" alt="">
+                </div>
+                <div class="contReactions">
+                    <img src="../assets/images/like.png" alt="">
+                    <img src="../assets/images/comment.png" alt="">
+                    <img src="../assets/images/share.svg" alt="">
+                </div>
             </div>
+            
         </div> <!-- Cierra Columna Derecha -->
-
-
     </div>
 
     <!-- Scripts de Bootstrap -->
