--- a/index.html
+++ b/index.html
@@ -41,13 +41,14 @@
                 <br>
 
                 <div class="log">¿Ya tienes cuenta con nosotros?, inicia sesión:
-                    <br> <button type="submit" id="button-register" class="btn btn-outline-danger btn-lg">Iniciar
+                    <br> <button type="submit" id="login-button" id="button-register"
+                        class="btn btn-outline-danger btn-lg">Iniciar
                         sesión</button>
                 </div>
                 <br>
                 <br>
                 <div class="log"> Unete a la comunidad de gamers mas chambeadora
-                    <br> <button type="submit" id="button-register"
+                    <br> <button type="submit" id="register-button" id="button-register"
                         class="btn btn-outline-danger  btn-lg">Registrarse</button>
                 </div>
 
