--- a/pages/login.html
+++ b/pages/login.html
@@ -79,11 +79,11 @@
         </form>
     </div>
 
-
+    
+    <script src="/assets/scripts/login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <script src="../assets/scripts/login.js"></script>
     <script src="../assets/scripts/scriptsMenuNavbar.js"></script>
 </body>
 
