--- a/pages/profile.html
+++ b/pages/profile.html
@@ -17,8 +17,7 @@
     <title>LinkGameIn - Perfil</title>
 
     <!-- Styles -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/styles/stylesProfile.css">
     
 </head>
@@ -168,18 +167,36 @@
             </div> <!-- Cierra Amigos -->
         </div> <!-- Cierra Columna Izquierda -->
 
+        <!-- Modal de publicación -->
+        <div id="modal" class="modal">
+            <div class="modal-content">
+                <button id="close-modal">X</button>
+                <textarea id="post-text" placeholder="Escribe tu publicación..."></textarea>
+                <div class="containerButtonsModal">
+                    <div class="custom-file-input">
+                        <img src="../assets/images/picture.png" alt="Seleccionar imagen" id="image-button">
+                        <input type="file" id="image-input" multiple accept="image/*">
+                    </div>
+                    <button id="post-button">Publicar</button>
+                </div>
+            </div>
+        </div> <!-- Cierra Modal de publicación -->
+        <!-- Overlay para cuando se abre el modal -->
+        <div class="overlay"></div>
+
         <!-- Columna Derecha -->
         <div class="col-xl-6 colRight">
             <!-- Contenedor Crear Publicación -->
             <div class="containerMadePubli">
-                <textarea type="text" class="form-control" id="madePubliText" rows="10"
-                    placeholder="Publica algo $Nickname..."></textarea>
-                    <div class="containerButtons">
-                        <img src="../assets/images/picture.png" alt="" id="madePubliImg">
-                        <button type="button" class="btn btn-primary" id="btnMadePubli">
-                            PUBLICAR
-                        </button>
-                    </div>
+                <button type="button" class="open-modal" id="madePubliBtn">
+                    Publica algo $Nickname...
+                </button>
+                <div class="containerButtons open-modal" id="contButtons">
+                    <img src="../assets/images/picture.png" alt="" id="madePubliImg">
+                    <button type="button" class="btn btn-primary" id="btnMadePubli">
+                        PUBLICAR
+                    </button>
+                </div>
             </div> <!-- Cierra Contenedor Crear Publicación -->
             <!-- Publicaciones -->
             <div class="containerPubli">
