--- a/pages/profileFriend.html
+++ b/pages/profileFriend.html
@@ -166,7 +166,7 @@
             <!-- Publicaciones -->
             <div class="containerPubli">
                 <div class="contPersonalInfo-Publi">
-                    <img src="../assets/images/perfil.jpg" alt="">
+                    <img src="../assets/images/Friend1.jpg" alt="">
                     <div id="nicknamePrestige">
                         <span>Nickname</span>
                         <p>Warzone Pro</p>
@@ -187,7 +187,7 @@
             </div>
             <div class="containerPubli">
                 <div class="contPersonalInfo-Publi">
-                    <img src="../assets/images/perfil.jpg" alt="">
+                    <img src="../assets/images/Friend1.jpg" alt="">
                     <div id="nicknamePrestige">
                         <span>Nickname</span>
                         <p>Warzone Pro</p>
