--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -39,7 +39,8 @@
             </div>
             <div class="col-12 mb-3 position-relative">
                 <div class="form-floating">
-                    <input type="text" name="input-name" class="form-control" id="input-name" placeholder="Nombre" required>
+                    <input type="text" name="input-name" class="form-control" id="input-name" placeholder="Nombre"
+                        required>
                     <label for="input-name">Nombre</label>
                     <div class="valid-tooltip">
                         Correcto
@@ -51,7 +52,8 @@
             </div>
             <div class="col-12 mb-3 position-relative">
                 <div class="form-floating">
-                    <input type="email" name="input-email" class="form-control" id="input-email" placeholder="correo@ejemplo.com" required>
+                    <input type="email" name="input-email" class="form-control" id="input-email"
+                        placeholder="correo@ejemplo.com" required>
                     <label for="input-email">correo@ejemplo.com</label>
                     <div class="valid-tooltip">
                         Correcto
@@ -88,12 +90,12 @@
                 </div>
             </div>
             <div class="d-grid gap-2 col-12 mx-auto" id="btn-send">
-				<button type="submit" class="btn btn-outline-danger btn-lg">Enviar</button>
-			</div>
+                <button type="submit" class="btn btn-outline-danger btn-lg">Enviar</button>
+            </div>
         </form>
     </div>
 
-    
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
@@ -102,4 +104,5 @@
     <script src="../assets/scripts/validaciones.js"></script>
 
 </body>
+
 </html>
