--- a/pages/addGames.html
+++ b/pages/addGames.html
@@ -13,9 +13,23 @@
     <link rel="stylesheet" href="../assets/styles/addGames.css">
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
+
+    <!-- Barra de navegación -->
+    <nav class="custom-navbar d-flex justify-content-between">
+        <!-- Contenedor Logo -->
+        <div id="containerLogo">
+        </div> <!-- Cierre de contenedor logo -->
+        <!-- Contenedor de Imagen Login/Logout -->
+        <div class="containerProfile position-relative" id="profileImg">
+        </div> <!-- Cierre de contenedor de Imagen Login/Logout -->
+        <!-- Contenedor Menu Config -->
+        <div class="config-menu" id="configMenu">
+        </div> <!-- Cierre div de menu -->
+    </nav> <!-- Cierre de Barra de navegación -->
+
     <div class="container">
-        <!-- Swiper -->
+        
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
@@ -216,6 +230,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+        <script src="../assets/scripts/scriptsMenuNavbar.js"></script>
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="../assets/scripts/games.js"></script>
