Actualizacion de personalizacion de registro

--- a/pages/registrarUsuario.html
+++ b/pages/registrarUsuario.html
@@ -142,7 +142,8 @@
 				</div>
 			</div>
 			<div class="d-grid gap-2 col-12 mx-auto" id="btn-register">
-				<button type="submit" id="button-register" class="btn btn-outline-danger  btn-lg">Registrarse</button>
+				<button type="submit" id="button-register" class="btn btn-outline-danger  btn-lg"
+					formaction="./personalizaRegistro.html">Registrarse</button>
 			</div>
 
 		</form>
