--- a/pages/personalizaRegistro.html
+++ b/pages/personalizaRegistro.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <style>
-    option:checked,
-    option:hover {
-        background-color: lime;
-    }
 </style>
 
 <head>
@@ -42,17 +38,85 @@
                 Personaliza tu perfil
             </div>
             <div class="container-hijo col-12 mb-3 d-flex flex-column">
+                <label for="input-profile-picture">Selecciona un avatar de perfil:</label>
                 <div class="image-preview d-flex justify-content-center align-items-center">
-                    <img id="image-preview" class="profile-image" src="../assets/images/modo-retrato.svg" alt="Preview">
+                    <img id="image-preview" class="profile-image" src="" alt="Preview">
                 </div>
-                <label for="input-profile-picture">Imagen de perfil</label>
-                <input type="file" name="input-profile-picture" class="form-control" id="input-profile-picture"
-                    accept="image/*">
+                <select name="input-profile-picture" class="form-select" id="input-profile-picture" required>
+                    <option id="options" value="" disabled selected>Selecciona un avatar</option>
+                    <option value="/assets/images/IconosDePerfil/1.png">Avatar 1</option>
+                    <option value="/assets/images/IconosDePerfil/2.png">Avatar 2</option>
+                    <option value="/assets/images/IconosDePerfil/3.png">Avatar 3</option>
+                    <option value="/assets/images/IconosDePerfil/4.png">Avatar 4</option>
+                    <option value="/assets/images/IconosDePerfil/5.png">Avatar 5</option>
+                    <option value="/assets/images/IconosDePerfil/6.png">Avatar 6</option>
+                    <option value="/assets/images/IconosDePerfil/7.png">Avatar 7</option>
+                    <option value="/assets/images/IconosDePerfil/8.png">Avatar 8</option>
+                    <option value="/assets/images/IconosDePerfil/9.png">Avatar 9</option>
+                    <option value="/assets/images/IconosDePerfil/10.png">Avatar 10</option>
+                    <option value="/assets/images/IconosDePerfil/11.png">Avatar 11</option>
+                    <option value="/assets/images/IconosDePerfil/12.png">Avatar 12</option>
+                    <option value="/assets/images/IconosDePerfil/13.png">Avatar 13</option>
+                    <option value="/assets/images/IconosDePerfil/14.png">Avatar 14</option>
+                    <option value="/assets/images/IconosDePerfil/15.png">Avatar 15</option>
+                    <option value="/assets/images/IconosDePerfil/16.png">Avatar 16</option>
+                    <option value="/assets/images/IconosDePerfil/17.png">Avatar 17</option>
+                    <option value="/assets/images/IconosDePerfil/18.png">Avatar 18</option>
+                    <option value="/assets/images/IconosDePerfil/19.png">Avatar 19</option>
+                    <option value="/assets/images/IconosDePerfil/20.png">Avatar 20</option>
+                    <option value="/assets/images/IconosDePerfil/21.png">Avatar 21</option>
+                    <option value="/assets/images/IconosDePerfil/22.png">Avatar 22</option>
+                    <option value="/assets/images/IconosDePerfil/23.png">Avatar 23</option>
+                    <option value="/assets/images/IconosDePerfil/24.png">Avatar 24</option>
+                    <option value="/assets/images/IconosDePerfil/25.png">Avatar 25</option>
+                    <option value="/assets/images/IconosDePerfil/26.png">Avatar 26</option>
+                    <option value="/assets/images/IconosDePerfil/27.png">Avatar 27</option>
+                    <option value="/assets/images/IconosDePerfil/28.png">Avatar 28</option>
+                    <option value="/assets/images/IconosDePerfil/29.png">Avatar 29</option>
+                    <option value="/assets/images/IconosDePerfil/30.png">Avatar 30</option>
+                    <option value="/assets/images/IconosDePerfil/31.png">Avatar 31</option>
+                    <option value="/assets/images/IconosDePerfil/32.png">Avatar 32</option>
+                    <option value="/assets/images/IconosDePerfil/33.png">Avatar 33</option>
+                    <option value="/assets/images/IconosDePerfil/34.png">Avatar 34</option>
+                    <option value="/assets/images/IconosDePerfil/35.png">Avatar 35</option>
+                    <option value="/assets/images/IconosDePerfil/36.png">Avatar 36</option>
+                    <option value="/assets/images/IconosDePerfil/37.png">Avatar 37</option>
+                    <option value="/assets/images/IconosDePerfil/38.png">Avatar 38</option>
+                    <option value="/assets/images/IconosDePerfil/39.png">Avatar 39</option>
+                    <option value="/assets/images/IconosDePerfil/40.png">Avatar 40</option>
+                    <option value="/assets/images/IconosDePerfil/41.png">Avatar 41</option>
+                    <option value="/assets/images/IconosDePerfil/42.png">Avatar 42</option>
+                    <option value="/assets/images/IconosDePerfil/43.png">Avatar 43</option>
+                    <option value="/assets/images/IconosDePerfil/44.png">Avatar 44</option>
+                    <option value="/assets/images/IconosDePerfil/45.png">Avatar 45</option>
+                    <option value="/assets/images/IconosDePerfil/46.png">Avatar 46</option>
+                    <option value="/assets/images/IconosDePerfil/47.png">Avatar 47</option>
+                    <option value="/assets/images/IconosDePerfil/48.png">Avatar 48</option>
+                    <option value="/assets/images/IconosDePerfil/49.png">Avatar 49</option>
+                    <option value="/assets/images/IconosDePerfil/50.png">Avatar 50</option>
+                    <!-- más opciones de avatares aquí jiji -->
+
+                </select>
             </div>
+
+            <div class="container-hijo col-12 mb-3 d-flex flex-column">
+                <label for="input-background-image">Selecciona una imagen de fondo:</label>
+                <select name="input-background-image" class="form-select" id="input-background-image" required>
+                    <option id="options" value="" disabled selected>Selecciona un fondo para tu perfil</option>
+                    <option value="/assets/images/IconosDePerfil/Fondo-Arcoiris.jpg">Fondo arcoiris</option>
+                    <option value="/assets/images/IconosDePerfil/Fondo-Azul-Rojo.jpg">Fondo azul y rojo</option>
+                    <option value="/assets/images/IconosDePerfil/Fondo-Azul-Rosa.jpg">Fondo celeste y rosa</option>
+                    <option value="/assets/images/IconosDePerfil/Fondo-Morado-Rosa.jpg">Fondo morado y rosa</option>
+                    <option value="/assets/images/IconosDePerfil/Fondo-Negro-Azul.jpg">Fondo negro y azul</option>
+                    <option value="/assets/images/IconosDePerfil/Fondo-Negro-Celeste.jpg">Fondo negro y celeste</option>
+                    <!-- más opciones de imágenes de fondo aquí -->
+                </select>
+            </div>
+
+
             <div class="col-12 mb-3">
                 <div class="form-floating">
-                    <select name="input-game-category" class="form-select" id="input-game-category" required
-                        style="option:hover{background-color: antiquewhite;}">
+                    <select name="input-game-category" class="form-select" id="input-game-category" required>
                         <option id="options" value="" disabled selected>Selecciona una categoría de juegos</option>
                         <option id="options" value="Deportes">Deportes</option>
                         <option id="options" value="Estrategia">Estrategia</option>
