Se agrega funcionalidad para guardar y eliminar publicacones del localStorage, falta agregar estilos y que se carge una imagen

--- a/pages/dashBoard.html
+++ b/pages/dashBoard.html
@@ -158,12 +158,15 @@
         <!-- Overlay para cuando se abre el modal -->
         <div class="overlay"></div>
 
+        <div id="contenedorDePublicaciones" class="card custom-card ">
+
+        </div>
 
 
                 <div class="card custom-card ">
                     <div class="containerprofile d-flex"><img class="profile-img" src="../assets/images/timbers.png"
                             alt="" srcset="">
-                        <div>
+                        <div >
                             <h4>NoSoyTimbers</h4>
                             <p>Fortnite Esports</p>
                         </div>
