Bg color ->SOLID #000, NavBar color -> #141414 (applied to all pages), box shadowing applied on formularies, T&C updated, dashboard styles (background color, card styles), chat test button (not working yet)

--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
                 <br>
                 <br>
 
-                <div class="log">¿Ya tienes cuenta con nosotros?, inicia sesión:
-                    <br> <button type="submit" id="login-button" id="button-register"
-                        class="btn btn-outline-danger btn-lg">Iniciar
+                <div class="log">¿Ya tienes cuenta con nosotros?:
+                    <br> <br> <button type="submit" id="login-button" id="button-register"
+                        class="btn btn-outline-danger btn-lg">Inicia
                         sesión</button>
                 </div>
                 <br>
                 <br>
-                <div class="log"> Unete a la comunidad de gamers mas chambeadora
-                    <br> <button type="submit" id="register-button" id="button-register"
-                        class="btn btn-outline-danger  btn-lg">Registrarse</button>
+                <div class="log"> ¿Aún no tienes cuenta? Únete, y lleva tu experiencia gaming al siguiente nivel:
+                    <br> <br> <button type="submit" id="register-button" id="button-register"
+                        class="btn btn-outline-danger  btn-lg">Registrate</button>
                 </div>
 
             </div>
@@ -72,10 +72,7 @@
                                         #AlphaAtheris #LATAM #Esports</p>
                                     <img src="./assets/images/publiesports.jpg" alt="" srcset="">
                                 </div>
-                                <div class="social-icon"><img src="./assets/images/like.png" alt="">
-                                    <img src="./assets/images/comment.png" alt="">
-                                    <img src="./assets/images/share.svg" alt="">
-                                </div>
+
                             </div>
                         </div><!--cierra primer tarjeta-->
                         <div class="carousel-item">
@@ -93,10 +90,7 @@
 
                                     <img src="./assets/images/Jelty.jpg" alt="" srcset="">
                                 </div>
-                                <div class="social-icon"><img src="./assets/images/like.png" alt="">
-                                    <img src="./assets/images/comment.png" alt="">
-                                    <img src="./assets/images/share.svg" alt="">
-                                </div>
+
                             </div>
 
                         </div> <!--cierre segunda tarjeta-->
@@ -116,10 +110,7 @@
 
                                     <img src="./assets/images/miselded.jpg" alt="" srcset="">
                                 </div>
-                                <div class="social-icon"><img src="./assets/images/like.png" alt="">
-                                    <img src="./assets/images/comment.png" alt="">
-                                    <img src="./assets/images/share.svg" alt="">
-                                </div>
+
                             </div>
 
                         </div>
