--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -37,10 +37,11 @@
 
     <br>
 
-    <h1 id="about">Sobre nosotros</h1>
+    <h1 id="about" class="gamers">Sobre nosotros</h1>
     <!--Título de página-->
 
-    <div class="container d-flex justify-content-center align-items-center"> <!--Container de carrusel-->
+    <div class="container d-flex justify-content-center align-items-center" id="container1">
+        <!--Container de carrusel-->
         <div id="cardCarousel" class="carousel" data-bs-ride="carousel" data-bs-interval="6000"> <!--primer carrusel-->
             <div class="carousel-inner" role="listbox"> <!--primer item carrusel-->
                 <div class="carousel-item active">
