--- a/pages/Terminosycondiciones.html
+++ b/pages/Terminosycondiciones.html
@@ -32,11 +32,13 @@
         </div> <!-- Cierre div de menu -->
     </nav> <!-- Cierre de Barra de navegación -->
 
-    <h1 id="about">Términos y condiciones</h1>
-    <!--Título de página-->
-
     <br>
-    <div class="container text-center">
+    <div class="container text-center"> <br>
+        <h1 id="about">Términos y condiciones</h1>
+        <!--Título de página-->
+
+        <br>
+
         <div class="row align-items-start">
             <div class="col">
                 <div class="mb-4">
@@ -126,10 +128,12 @@
                 </div>
             </div>
         </div>
+        <h5>Para cualquier pregunta o inquietud relacionada con estos términos, puedes contactarnos en
+            LinkGameIn@gmail.com
+        </h5> <br>
     </div>
 
-    <h5>Para cualquier pregunta o inquietud relacionada con estos términos, puedes contactarnos en LinkGameIn@gmail.com
-    </h5>
+
 
 
 
