--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -37,6 +37,9 @@
             <div class="col" id="title-contact">
                 Contáctanos
             </div>
+            <div class="login-image">
+                <img src="../assets/images/GRoja.svg" width="80px" height="130px" alt="">
+            </div>
             <div class="col-12 mb-3 position-relative">
                 <div class="form-floating">
                     <input type="text" name="input-name" class="form-control" id="input-name" placeholder="Nombre"
