--- a/pages/profileFriend.html
+++ b/pages/profileFriend.html
@@ -43,14 +43,14 @@
     <!-- Personal info -->
     <div class="contSuperior">
         <div class="contProfileBack">
-            <img src="../assets/images/pexels-alexander-kovalev-3977908.jpg" alt="">
+            <img src="../assets/images/IconosDePerfil/Fondo-Azul-Rosa.jpg" alt="">
         </div>
         <div class="contProfilePick">
-            <img src="../assets/images/Friend1.jpg" alt="">
+            <img src="../assets/images/IconosDePerfil/38.png" alt="">
         </div>
         <div class="contNickname">
             <h1>
-                Nickname
+                Della
             </h1>
         </div>
     </div>
@@ -137,22 +137,22 @@
                 <div class="scrollmenu scrollMenuAmigos">
                     <ul class="menu menuAmigos">
                         <li>
-                            <img src="../assets/images/perfil.jpg">
+                            <img src="../assets/images/IconosDePerfil/12.png">
                         </li>
                         <li>
-                            <img src="../assets/images/Friend2.jpg">
+                            <img src="../assets/images/IconosDePerfil/8.png">
                         </li>
                         <li>
-                            <img src="../assets/images/Friend3.jpg">
+                            <img src="../assets/images/IconosDePerfil/35.png">
                         </li>
                         <li>
-                            <img src="../assets/images/Friend4.jpg">
+                            <img src="../assets/images/IconosDePerfil/47.png">
                         </li>
                         <li>
-                            <img src="../assets/images/Friend5.jpg">
+                            <img src="../assets/images/IconosDePerfil/3.png">
                         </li>
                         <li>
-                            <img src="../assets/images/Friend6.jpg">
+                            <img src="../assets/images/IconosDePerfil/11.png">
                         </li>
                     </ul>
                 </div>
@@ -166,9 +166,9 @@
             <!-- Publicaciones -->
             <div class="containerPubli">
                 <div class="contPersonalInfo-Publi">
-                    <img src="../assets/images/Friend1.jpg" alt="">
+                    <img src="../assets/images/IconosDePerfil/38.png" alt="">
                     <div id="nicknamePrestige">
-                        <span>Nickname</span>
+                        <span>Della</span>
                         <p>Warzone Pro</p>
                     </div>
                 </div>
@@ -187,9 +187,9 @@
             </div>
             <div class="containerPubli">
                 <div class="contPersonalInfo-Publi">
-                    <img src="../assets/images/Friend1.jpg" alt="">
+                    <img src="../assets/images/IconosDePerfil/38.png" alt="">
                     <div id="nicknamePrestige">
-                        <span>Nickname</span>
+                        <span>Della</span>
                         <p>Warzone Pro</p>
                     </div>
                 </div>
