--- a/pages/registrarUsuario.html
+++ b/pages/registrarUsuario.html
@@ -36,6 +36,9 @@
 			<div class="col-12" id="title-register">
 				Registro
 			</div>
+			<div class="login-image">
+				<img src="../assets/images/GRoja.svg" width="80px" height="130px" alt="">
+			</div>
 			<div class="col-12 mb-3 position-relative">
 				<div class="input-group">
 					<div class="form-floating">
@@ -111,15 +114,8 @@
 			</div>
 			<div class="col-12">
 				<div class="form-check">
-					<input type="checkbox" class="form-check-input" id="check-get-support">
-					<label for="check-get-support" class="form-check-label">Deseo recibir apoyo de otros
-						jugadores</label>
-				</div>
-			</div>
-			<div class="col-12">
-				<div class="form-check">
 					<input type="checkbox" class="form-check-input" id="check-give-support">
-					<label for="check-give-support" class="form-check-label">Deseo brindar apoyo de otros
+					<label for="check-give-support" class="form-check-label">Deseo recibir y/o brindar apoyo de otros
 						jugadores</label>
 				</div>
 			</div>
