fix: :bug: Fix responsive design, missing in modal

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -56,7 +56,7 @@
 
     <div class="row rowFather">
         <!-- Columna Izquierda -->
-        <div class="col-xl-6 colLeft">
+        <div class="col-lg-6 col-xl-6 colLeft">
             <!-- Juegos y Logros -->
             <div class="row containerJuegosLogros">
                 <h2>
@@ -170,26 +170,26 @@
         <!-- Modal de publicación -->
         <div id="modal" class="modal">
             <form id="post-form">
-            <div class="modal-content">
-                <button id="close-modal">X</button>
-                <textarea id="post-text" placeholder="Escribe tu publicación..."></textarea>
-                <!-- Etiqueta de imagen para la previsualización -->
-                <img id="imagePreview" src="" alt="">
-                <div class="containerButtonsModal">
-                    <div class="custom-file-input">
-                        <img src="../assets/images/picture.png" alt="Seleccionar imagen" id="image-button">
-                        <input type="file" id="image-input" multiple accept="image/*">
+                <div class="modal-content">
+                    <button id="close-modal">X</button>
+                    <textarea id="post-text" placeholder="Escribe tu publicación..."></textarea>
+                    <!-- Etiqueta de imagen para la previsualización -->
+                    <img id="imagePreview" src="" alt="">
+                    <div class="containerButtonsModal">
+                        <div class="custom-file-input">
+                            <img src="../assets/images/picture.png" alt="Seleccionar imagen" id="image-button">
+                            <input type="file" id="image-input" multiple accept="image/*">
+                        </div>
+                        <button type="submit" id="post-button">Publicar</button>
                     </div>
-                    <button type="submit" id="post-button">Publicar</button>
                 </div>
-            </div>
             </form>
         </div> <!-- Cierra Modal de publicación -->
         <!-- Overlay para cuando se abre el modal -->
         <div class="overlay"></div>
 
         <!-- Columna Derecha -->
-        <div class="col-xl-6 colRight">
+        <div class="col-lg-6 col-xl-6 colRight">
             <!-- Contenedor Crear Publicación -->
             <div class="containerMadePubli">
                 <button type="button" class="open-modal" id="madePubliBtn">
