--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-5"> <br>
+            <div class="col-md-5 col-sm-12"> <br>
                 <h3 class="gamers">De gamers, para gamers.</h3> <br> <br>
                 <h5 class="subtitle">Comparte, juega y conecta.</h5>
                 <br>
@@ -54,7 +54,7 @@
 
             </div>
 
-            <div class="col-7">
+            <div class="col-md-7 col-sm-12">
                 <div id="cardCarousel" class="carousel" data-bs-ride="carousel" data-bs-interval="5000">
                     <!--primer carrusel-->
                     <div class="carousel-inner" role="listbox"> <!--primer item carrusel-->
@@ -123,10 +123,11 @@
     </div> <!--cierre container-->
 
     <br>
-    <div class="linking">
-        Linking Gamers To Success
-    </div>
-
+    <footer>
+        <div class="linking">
+            Linking Gamers To Success
+        </div>
+    </footer>
 
 
 
