--- a/pages/registrarUsuario.html
+++ b/pages/registrarUsuario.html
@@ -13,9 +13,20 @@
 		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<link rel="stylesheet" href="../assets/styles/registrarUsusario.css">
 	<style type="text/css" media="screen">
-		A:link {color: #ea2527; font-size: 8pt;}
-		A:hover {color: #ea2527; font-size: 8pt;}
-		A:visited {color: #ea2527; font-size: 8pt;}
+		A:link {
+			color: #ea2527;
+			font-size: 8pt;
+		}
+
+		A:hover {
+			color: #ea2527;
+			font-size: 8pt;
+		}
+
+		A:visited {
+			color: #ea2527;
+			font-size: 8pt;
+		}
 	</style>
 </head>
 
@@ -69,70 +80,76 @@
 				</div>
 			</div>
 			<div class="col-12 mb-3 position-relative">
-				<div class="form-floating">
-					<input type="text" class="form-control" id="input-nickname" placeholder="Apodo" required>
-					<label for="input-nickname">Nickname</label>
-					<div class="valid-tooltip">
-						Correcto
-					</div>
-					<div class="invalid-tooltip">
-						Es necesario añadir un nickname
-					</div>
-				</div>
-			</div>
-			<div class="col-12 mb-3 position-relative">
-				<div class="form-floating">
-					<input type="email" class="form-control" id="input-email" placeholder="correo@ejemplo.com" required>
-					<label for="input-email">correo@ejemplo.com</label>
-					<div class="valid-tooltip">
-						Correcto
-					</div>
-					<div class="invalid-tooltip">
-						Es necesario añadir un correo
+				<div class="col-12 mb-3 position-relative">
+					<div class="form-floating">
+						<input type="text" class="form-control" id="input-nickname" placeholder="Apodo" required>
+						<label for="input-nickname">Nickname</label>
+						<div class="valid-tooltip">
+							Correcto
+						</div>
+						<div class="invalid-tooltip">
+							Es necesario añadir un apodo
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="col-12 mb-3 position-relative">
-				<div class="form-floating">
-					<input type="password" class="form-control" id="input-password" placeholder="Contraseña" required>
-					<label for="input-password">Contraseña</label>
-					<div class="valid-tooltip">
-						Correcto
-					</div>
-					<div class="invalid-tooltip">
-						Es necesario añadir una contraseña
-					</div>
-				</div>
-			</div>
-			<div class="col-12 mb-3 position-relative">
-				<div class="form-floating">
-					<input type="password" class="form-control" id="input-password-confirm"
-						placeholder="Confirmar contraseña" required>
-					<label for="input-password-confirm">Confirmar contraseña</label>
-					<div class="valid-tooltip">
-						Correcto
-					</div>
-					<div class="invalid-tooltip">
-						Es necesario confirmar la contraseña
+				<div class="col-12 mb-3 position-relative">
+					<div class="form-floating">
+						<input type="email" class="form-control" id="input-email" placeholder="correo@ejemplo.com"
+							required>
+						<label for="input-email">correo@ejemplo.com</label>
+						<div class="valid-tooltip">
+							Correcto
+						</div>
+						<div class="invalid-tooltip">
+							Es necesario añadir un correo
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="col-12 position-relative">
-				<div class="form-check">
-					<input type="checkbox" class="form-check-input" id="check-legal-age" required>
-					<label for="check-legal-age" class="form-check-label">Soy mayor de 18 años</label>
-					<div class="invalid-tooltip">
-						Es necesario que seas mayor de edad
+				<div class="col-12 mb-3 position-relative">
+					<div class="form-floating">
+						<input type="password" class="form-control" id="input-password" placeholder="Contraseña"
+							required>
+						<label for="input-password">Contraseña</label>
+						<div class="valid-tooltip">
+							Correcto
+						</div>
+						<div class="invalid-tooltip">
+							Es necesario añadir una contraseña
+						</div>
+					</div>
+				</div>
+				<div class="col-12 mb-3 position-relative">
+					<div class="form-floating">
+						<input type="password" class="form-control" id="input-password-confirm"
+							placeholder="Confirmar contraseña" required>
+						<label for="input-password-confirm">Confirmar contraseña</label>
+						<div class="valid-tooltip">
+							Correcto
+						</div>
+						<div class="invalid-tooltip">
+							Es necesario confirmar la contraseña
+						</div>
+					</div>
+				</div>
 
-			<div id="checked-btn">
 				<div class="col-12 position-relative">
 					<div class="form-check">
 						<input type="checkbox" class="form-check-input" id="check-legal-age" required>
 						<label for="check-legal-age" class="form-check-label">Soy mayor de 18 años</label>
+						<div class="invalid-tooltip">
+							Es necesario que seas mayor de edad
+						</div>
 					</div>
 				</div>
-				<div class="col-12">
-					<p id="conditions">Al dar click en "Registrarse", aceptas nuestros <a href="./Terminosycondiciones.html">términos y condiciones</a>.</p>
+				<div class="col-12 position-relative">
+					<div class="form-check">
+						<input type="checkbox" class="form-check-input" id="check-terms-conditions" required>
+						<label for="check-terms-conditions" class="form-check-label">Acepto términos y
+							condiciones</label>
+						<div class="invalid-tooltip">
+							Es necesario que aceptes los términos y condiciones
+						</div>
+					</div>
 				</div>
 
 			</div>
