Se arregla la navbar del dashboard, se cambian imagenes de jugadores por iconos y se enlaza el perfil de un amigo

--- a/pages/dashBoard.html
+++ b/pages/dashBoard.html
@@ -59,13 +59,12 @@
 
                         <br>
                         <br>
-                        <p id="amigos-activos">Amigos activos</p>
+                        <p id="amigos-activos">Jugadores activos</p>
 
                         </li>
                         <li class="dash-item">
-                            <a class="link active" aria-current="page" href="#">
-                                <img src="../assets/images/Friend1.jpg" alt="" class="rounded-circle friend-img">Gamer
-                                01
+                            <a class="link active" aria-current="page" href="./profileFriend.html">
+                                <img src="../assets/images/IconosDePerfil/38.png" alt="" class="rounded-circle friend-img">Della <br>
                                 <!--imagen de perfil del amigo-->
 
                                 <!--lo que está jugando (la idea es que la palabra jugando esté por defecto)-->
@@ -73,27 +72,33 @@
                         </li>
                         <li class="dash-item">
                             <a class="link" href="#">
-                                <img src="../assets/images/Friend2.jpg" alt="" class="rounded-circle friend-img">
-                                Gamer 02
+                                <img src="../assets/images/IconosDePerfil/18.png" alt="" class="rounded-circle friend-img">
+                                Kalahazy
                             </a>Jugando Minecraft
                         </li>
                         <li class="dash-item">
                             <a class="link" href="#">
-                                <img src="../assets/images/Friend3.jpg" alt="" class="rounded-circle friend-img">Gamer
-                                03
+                                <img src="../assets/images/IconosDePerfil/46.png" alt="" class="rounded-circle friend-img">
+                                Alan<br>
 
                             </a>Jugando Valorant
                         </li>
                         <li class="dash-item">
                             <a class="link" href="#">
-                                <img src="../assets/images/Friend4.jpg" alt="" class="rounded-circle friend-img">
-                                Gamer 04
+                                <img src="../assets/images/IconosDePerfil/8.png" alt="" class="rounded-circle friend-img">
+                                Chinecio <br>
                             </a>Jugando Warzone
                         </li>
                         <li class="dash-item">
                             <a class="nav-link" href="#">
-                                <img src="../assets/images/Friend5.jpg" alt="" class="rounded-circle friend-img">
-                                Gamer 05
+                                <img src="../assets/images/IconosDePerfil/13.png" alt="" class="rounded-circle friend-img">
+                                Ale<br>
+                            </a>Jugando TFT
+                        </li>
+                        <li class="dash-item">
+                            <a class="nav-link" href="#">
+                                <img src="../assets/images/IconosDePerfil/19.png" alt="" class="rounded-circle friend-img">
+                                Maks<br>
                             </a>Jugando TFT
                         </li>
                     </ul>
