--- a/pages/profile.html
+++ b/pages/profile.html
@@ -137,28 +137,29 @@
             <!-- Amigos -->
             <div class="row containerAmigos">
                 <h2>
-                    Amigos
+                    Seguidos
                 </h2>
                 <div class="scrollmenu scrollMenuAmigos">
                     <ul class="menu menuAmigos">
-                        <li>
-                            <img src="../assets/images/Friend1.jpg">
+                        <li> <a href="./profileFriend.html"><img  src="../assets/images/IconosDePerfil/38.png"></a> Della
+                            
                         </li>
                         <li>
-                            <img src="../assets/images/Friend2.jpg">
+                            <img src="../assets/images/IconosDePerfil/18.png">Kalahazy
                         </li>
                         <li>
-                            <img src="../assets/images/Friend3.jpg">
+                            <img src="../assets/images/IconosDePerfil/46.png">Alan
                         </li>
                         <li>
-                            <img src="../assets/images/Friend4.jpg">
+                            <img src="../assets/images/IconosDePerfil/8.png">Chinecio
                         </li>
                         <li>
-                            <img src="../assets/images/Friend5.jpg">
+                            <img src="../assets/images/IconosDePerfil/13.png"> Ale
                         </li>
                         <li>
-                            <img src="../assets/images/Friend6.jpg">
+                            <img src="../assets/images/IconosDePerfil/19.png">Maks
                         </li>
+                        
                         <li>
                             <a href="../pages/listaAmigos.html">
                                 <img src="../assets/images/ver mas.png" id="verMasAmigos">
