feat: :sparkles: Register page working w/backend and DB
Add JS of fetchAPI into Register Page, query SQL and Gradle Project w/Spring Boot

--- a/pages/registrarUsuario.html
+++ b/pages/registrarUsuario.html
@@ -142,8 +142,9 @@
 				</div>
 			</div>
 			<div class="d-grid gap-2 col-12 mx-auto" id="btn-register">
-				<button type="submit" id="button-register" class="btn btn-outline-danger  btn-lg"
-					formaction="./personalizaRegistro.html">Registrarse</button>
+				<button type="submit" id="button-register" class="btn btn-outline-danger  btn-lg">
+					Registrarse
+				</button>
 			</div>
 
 		</form>
@@ -157,7 +158,7 @@
 		integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
 		crossorigin="anonymous"></script>
 	<script src="../assets/scripts/scriptsMenuNavbar.js"></script>
-	<script src="../assets/scripts/validaciones.js"></script>
+	<!-- <script src="../assets/scripts/validaciones.js"></script> -->
 	<script src="../assets/scripts/userStorage.js"></script>
 </body>
 
