--- a/pages/profileFriend.html
+++ b/pages/profileFriend.html
@@ -58,7 +58,7 @@
 
     <div class="row rowFather">
         <!-- Columna Izquierda -->
-        <div class="col-xl-6 colLeft">
+        <div class="col-lg-6 col-xl-6 colLeft">
             <!-- Juegos y Logros -->
             <div class="row containerJuegosLogros">
                 <h2>
@@ -126,88 +126,41 @@
                                 </div>
                             </div>
                         </li>
+
                     </ul>
                 </div>
             </div> <!-- Cierra Juegos y Logros -->
             <!-- Amigos -->
             <div class="row containerAmigos">
                 <h2>
-                    Amigos
+                    Seguidos
                 </h2>
                 <div class="scrollmenu scrollMenuAmigos">
                     <ul class="menu menuAmigos">
-                        <li>
-                            <img src="../assets/images/IconosDePerfil/12.png">
+                        <li> <a href="./profileFriend.html"><img src="../assets/images/IconosDePerfil/38.png"></a> Della
+
                         </li>
                         <li>
-                            <img src="../assets/images/IconosDePerfil/8.png">
+                            <img src="../assets/images/IconosDePerfil/18.png">Kalahazy
                         </li>
                         <li>
-                            <img src="../assets/images/IconosDePerfil/35.png">
+                            <img src="../assets/images/IconosDePerfil/46.png">Alan
                         </li>
                         <li>
-                            <img src="../assets/images/IconosDePerfil/47.png">
+                            <img src="../assets/images/IconosDePerfil/8.png">Chinecio
                         </li>
                         <li>
-                            <img src="../assets/images/IconosDePerfil/3.png">
+                            <img src="../assets/images/IconosDePerfil/13.png"> Ale
                         </li>
                         <li>
-                            <img src="../assets/images/IconosDePerfil/11.png">
+                            <img src="../assets/images/IconosDePerfil/19.png">Maks
                         </li>
                     </ul>
                 </div>
             </div> <!-- Cierra Amigos -->
         </div> <!-- Cierra Columna Izquierda -->
 
-        <!-- Columna Derecha -->
-        <div class="col-xl-6 colRight">
-            <!-- Contenedor Crear Publicación -->
-            <br> <br>
-            <!-- Publicaciones -->
-            <div class="containerPubli">
-                <div class="contPersonalInfo-Publi">
-                    <img src="../assets/images/IconosDePerfil/38.png" alt="">
-                    <div id="nicknamePrestige">
-                        <span>Della</span>
-                        <p>Warzone Pro</p>
-                    </div>
-                </div>
-                <div class="contText-Publi">
-                    <h3>Jugando en el torneo nacional de #Warzone en CDMX</h3>
-                    <span>#LATAM #proplayer</span>
-                </div>
-                <div class="contImg-Publi">
-                    <img src="../assets/images/COD_Game.avif" alt="">
-                </div>
-                <div class="contReactions">
-                    <img src="../assets/images/like.png" alt="">
-                    <img src="../assets/images/comment.png" alt="">
-                    <img src="../assets/images/share.svg" alt="">
-                </div>
-            </div>
-            <div class="containerPubli">
-                <div class="contPersonalInfo-Publi">
-                    <img src="../assets/images/IconosDePerfil/38.png" alt="">
-                    <div id="nicknamePrestige">
-                        <span>Della</span>
-                        <p>Warzone Pro</p>
-                    </div>
-                </div>
-                <div class="contText-Publi">
-                    <h3>Jugando en el torneo nacional de #Warzone en CDMX</h3>
-                    <span>#LATAM #proplayer</span>
-                </div>
-                <div class="contImg-Publi">
-                    <img src="../assets/images/COD_Game.avif" alt="">
-                </div>
-                <div class="contReactions">
-                    <img src="../assets/images/like.png" alt="">
-                    <img src="../assets/images/comment.png" alt="">
-                    <img src="../assets/images/share.svg" alt="">
-                </div>
-            </div>
 
-        </div> <!-- Cierra Columna Derecha -->
     </div>
 
     <!-- Scripts de Bootstrap -->
@@ -216,8 +169,9 @@
         crossorigin="anonymous"></script>
 
     <script src="../assets/scripts/scriptsMenuNavbar.js"></script>
-    <!-- <script src="../assets/scripts/publications.js"></script> -->
-
+    <script src="../assets/scripts/scriptsMenuNavbar.js"></script>
+    <script src="../assets/scripts/publications.js"></script>
+    <script src="../assets/scripts/crearPublicación.js"></script>
 </body>
 
 </html>
