--- a/pages/registrarUsuario.html
+++ b/pages/registrarUsuario.html
@@ -48,111 +48,66 @@
 
 	<div class="container">
 
-		<form class="row needs-validation" id="form-register-user" novalidate>
+		<form class="row" id="form-register-user" novalidate>
 			<div class="col-12" id="title-register">
 				Registro
 			</div>
 			<div class="login-image">
 				<img src="../assets/images/GRoja.svg" width="80px" height="130px" alt="">
 			</div>
-			<div class="col-12 mb-3 position-relative">
+			<div class="col-12 mb-3">
 				<div class="input-group">
 					<div class="form-floating">
 						<input type="text" class="form-control" id="input-name" placeholder="Nombre" required>
 						<label for="input-name">Nombre</label>
-						<div class="valid-tooltip">
-							Correcto
-						</div>
-						<div class="invalid-tooltip">
-							Es necesario añadir el nombre
-						</div>
 					</div>
 					<div class="form-floating">
 						<input type="text" class="form-control" id="input-last-name" placeholder="Apellido" required>
 						<label for="input-last-name">Apellido</label>
-						<div class="valid-tooltip">
-							Correcto
-						</div>
-						<div class="invalid-tooltip">
-							Es necesario añadir el apellido
-						</div>
 					</div>
 				</div>
 			</div>
-			<div class="col-12 mb-3 position-relative">
-				<div class="col-12 mb-3 position-relative">
-					<div class="form-floating">
-						<input type="text" class="form-control" id="input-nickname" placeholder="Apodo" required>
-						<label for="input-nickname">Nickname</label>
-						<div class="valid-tooltip">
-							Correcto
-						</div>
-						<div class="invalid-tooltip">
-							Es necesario añadir un apodo
-						</div>
-					</div>
-				</div>
-				<div class="col-12 mb-3 position-relative">
-					<div class="form-floating">
-						<input type="email" class="form-control" id="input-email" placeholder="correo@ejemplo.com"
-							required>
-						<label for="input-email">correo@ejemplo.com</label>
-						<div class="valid-tooltip">
-							Correcto
-						</div>
-						<div class="invalid-tooltip">
-							Es necesario añadir un correo
-						</div>
-					</div>
-				</div>
-				<div class="col-12 mb-3 position-relative">
-					<div class="form-floating">
-						<input type="password" class="form-control" id="input-password" placeholder="Contraseña"
-							required>
-						<label for="input-password">Contraseña</label>
-						<div class="valid-tooltip">
-							Correcto
-						</div>
-						<div class="invalid-tooltip">
-							Es necesario añadir una contraseña
-						</div>
-					</div>
-				</div>
-				<div class="col-12 mb-3 position-relative">
-					<div class="form-floating">
-						<input type="password" class="form-control" id="input-password-confirm"
-							placeholder="Confirmar contraseña" required>
-						<label for="input-password-confirm">Confirmar contraseña</label>
-						<div class="valid-tooltip">
-							Correcto
-						</div>
-						<div class="invalid-tooltip">
-							Es necesario confirmar la contraseña
-						</div>
-					</div>
-				</div>
 
-				<div class="col-12 position-relative">
-					<div class="form-check">
-						<input type="checkbox" class="form-check-input" id="check-legal-age" required>
-						<label for="check-legal-age" class="form-check-label">Soy mayor de 18 años</label>
-						<div class="invalid-tooltip">
-							Es necesario que seas mayor de edad
-						</div>
-					</div>
+			<div class="col-12 mb-3">
+				<div class="form-floating">
+					<input type="text" class="form-control" id="input-nickname" placeholder="Apodo" required>
+					<label for="input-nickname">Nickname</label>
 				</div>
-				<div class="col-12 position-relative">
-					<div class="form-check">
-						<input type="checkbox" class="form-check-input" id="check-terms-conditions" required>
-						<label for="check-terms-conditions" class="form-check-label">Acepto términos y
-							condiciones</label>
-						<div class="invalid-tooltip">
-							Es necesario que aceptes los términos y condiciones
-						</div>
-					</div>
-				</div>
-
 			</div>
+			<div class="col-12 mb-3">
+				<div class="form-floating">
+					<input type="email" class="form-control" id="input-email" placeholder="correo@ejemplo.com" required>
+					<label for="input-email">correo@ejemplo.com</label>
+				</div>
+			</div>
+			<div class="col-12 mb-3">
+				<div class="form-floating">
+					<input type="password" class="form-control" id="input-password" placeholder="Contraseña" required>
+					<label for="input-password">Contraseña</label>
+				</div>
+			</div>
+			<div class="col-12 mb-3">
+				<div class="form-floating">
+					<input type="password" class="form-control" id="input-password-confirm"
+						placeholder="Confirmar contraseña" required>
+					<label for="input-password-confirm">Confirmar contraseña</label>
+				</div>
+			</div>
+
+			<div class="col-12">
+				<div class="form-check">
+					<input type="checkbox" class="form-check-input" id="check-legal-age" required>
+					<label for="check-legal-age" class="form-check-label">Soy mayor de 18 años</label>
+				</div>
+			</div>
+			<div class="col-12">
+				<div class="form-check">
+					<input type="checkbox" class="form-check-input" id="check-terms-conditions" required>
+					<label for="check-terms-conditions" class="form-check-label">Acepto términos y
+						condiciones</label>
+				</div>
+			</div>
+
 			<div class="d-grid gap-2 col-12 mx-auto" id="btn-register">
 				<button type="submit" id="button-register" class="btn btn-outline-danger  btn-lg">
 					Registrarse
@@ -170,7 +125,6 @@
 		integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
 		crossorigin="anonymous"></script>
 	<script src="../assets/scripts/scriptsMenuNavbar.js"></script>
-	<!-- <script src="../assets/scripts/validaciones.js"></script> -->
 	<script src="../assets/scripts/userStorage.js"></script>
 </body>
 
